[package]
name = "DeepLearning_Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.19.0"
polars-core = { version = "0.19.0", features=["ndarray"]}
smartcore = {version = "0.2.0", default-features = false, features = ["nalgebra-bindings", "ndarray-bindings", "datasets"]}